update courses_data api working principle, json models, route and parsing of the prof
